Correções part 1